# twirl

./: .flake8  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docs-requirements.txt  pyproject.toml  pytest.ini  setup.py  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: conf.py  index.md
docs/ipynb/: wcs.ipynb
docs/md/: acknowledgement.md  api.rst  installation.md  principle.ipynb  principle.md
docs/notebooks/: example.ipynb  under the hood.ipynb
jupyter_execute/ipynb/: wcs.ipynb
tests/: test_geometric_match.py  test_sparsify.py
twirl/: __init__.py  config.py  geometry.py  match.py  quads.py  queries.py  triangles.py  utils.py
