[tool.poetry]
name = "twirl"
version = "0.1.3"
description = "Astrometric plate solving in Python"
authors = ["Lionel J. Garcia <lionel_garcia@live.fr r>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.1.1"
astroquery = "^0.4.6"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
requests = "^2.28.1"
scikit-image = "^0.20.0"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
