[tool.poetry]
name = "twirl"
version = "0.4.2"
description = "Astrometric plate solving in Python"
authors = ["Lionel J. Garcia <lionel_garcia@live.fr>"]
maintainers = [
  "Lionel J. Garcia <lionel_garcia@live.fr>",
  "Michael J. Roberts <michael@observerly.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://twirl.readthedocs.io"
repository = "https://github.com/lgrcia/twirl"
keywords = ["astronomy", "astrometry", "plate-solving"]

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^5.1.1"
astroquery = "^0.4.6"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
requests = "^2.28.1"
scikit-image = "^0.21.0"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
pytest = "^7.3.1"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
docutils = "*"
jupyterlab = "*"
myst-parser = "*"
twine = "*"
sphinx-book-theme = "^1.0.0"
myst-nb = "*"
sphinx-copybutton = "*"
photutils = "^1.6.0"
scipy = "*"
matplotlib = "*"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = [
  "sphinx",
  "docutils",
  "jupyterlab",
  "myst-parser",
  "twine",
  "sphinx-book-theme",
  "black",
  "myst-nb",
  "sphinx-copybutton",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
