[project]
name = "twirl"
version = "0.5.0"
description = "Astrometric plate solving in Python"
authors = [{ name = "Lionel Garcia"}]
maintainers = [{ name = "Lionel Garcia"}, {name="Michael J. Roberts", email="michael@observerly.com"}]
license = "MIT"
readme = "README.md"
homepage = "https://twirl.readthedocs.io"
repository = "https://github.com/lgrcia/twirl"
keywords = ["astronomy", "astrometry", "plate-solving"]
requires-python = ">=3.10"

dependencies = [
  "astropy>=5.1.1,<8",
  "astroquery>=0.4.6",
  "matplotlib>=3.10.0",
  "numpy>=1.26.4",
  "requests>=2.32.3",
  "scikit-image>=0.25.0",
  "scipy>=1.15.0"
]

[project.optional-dependencies]
test=["pytest"]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.261",
    "pytest>=7.3.1",
]
docs = [
  "sphinx>=8.1.3",
  "docutils>=0.21.2",
  "jupyterlab>=4.3.4",
  "myst-parser>=4.0.0",
  "twine>=6.0.1",
  "sphinx-book-theme>=1.1.3",
  "myst-nb>=1.1.2",
  "sphinx-copybutton>=0.5.2",
  "photutils>=2.0.2",
  "scipy>=1.15.0",
  "matplotlib>=3.10.0",
  "pandas>=2.2.3",
  "pyzmq>=26.2.0",
  "pyyaml>=6.0.2"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
